--- a/viz/package.json
+++ b/viz/package.json
@@ -3,47 +3,50 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-	"@testing-library/jest-dom": "^5.11.4",
-	"@testing-library/react": "^11.1.0",
-	"@testing-library/user-event": "^12.1.10",
-	"@types/jest": "^26.0.15",
-	"@types/node": "^12.0.0",
-	"@types/react": "^17.0.0",
-	"@types/react-dom": "^17.0.0",
-	"react": "^17.0.1",
-	"react-dom": "^17.0.1",
-	"react-scripts": "4.0.3",
-	"typescript": "^4.1.2",
-	"web-vitals": "^1.0.1"
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "3dmol": "^1.6.2",
+        "jquery": "^3.5.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-scripts": "4.0.3",
+        "typescript": "^4.1.2",
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
-	"start": "react-scripts start",
-	"build": "react-scripts build",
-	"test": "react-scripts test",
-	"eject": "react-scripts eject",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
-	"extends": [
-	    "react-app",
-	    "react-app/jest"
-	]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
-	"production": [
-	    ">0.2%",
-	    "not dead",
-	    "not op_mini all"
-	],
-	"development": [
-	    "last 1 chrome version",
-	    "last 1 firefox version",
-	    "last 1 safari version"
-	]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "devDependencies": {
-	"gh-pages": "^3.1.0"
+        "@types/jquery": "^3.5.5",
+        "gh-pages": "^3.1.0"
     },
     "homepage": "http://ninjha01.github.io/feld1viz"
 }
