--- a/viz/package.json
+++ b/viz/package.json
@@ -11,8 +11,10 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "3dmol": "^1.6.2",
+        "bootstrap": "^4.6.0",
         "jquery": "^3.5.1",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.5.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
