--- a/viz/package.json
+++ b/viz/package.json
@@ -51,5 +51,5 @@
         "@types/jquery": "^3.5.5",
         "gh-pages": "^3.1.0"
     },
-    "homepage": "http://ninjha01.github.io/feld1viz"
+    "homepage": "."
 }
